--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      href="./3d-party/bootstrap-5.2.3-dist/css/bootstrap.min.css"
     />
   </head>
   <body>
     <script src="js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./3d-party/bootstrap-5.2.3-dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
