--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     />
   </head>
   <body>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-sm-4 col-md-8 bg-color-yellow">123123</div>
+        <div class="col-sm-4 col-md-4 bg-color-yellow">123123</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2 col-md-2 bg-color-blue">123</div>
+        <div class="col-sm-2 col-md-2 bg-color-blue">123</div>
+        <div class="col-sm-2 col-md-2 bg-color-blue">123</div>
+        <div class="col-sm-2 col-md-2 bg-color-blue">123</div>
+      </div>
+    </div>
     <script src="js/main.js"></script>
     <script src="./3d-party/bootstrap-5.2.3-dist/js/bootstrap.bundle.js"></script>
   </body>
