--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <div class="container text-center">
+    <div class="container-fluid text-center">
       <div class="row">
         <div class="col-md-8 bg-color-yellow">123123</div>
         <div class="col-md-4 bg-color-yellow">123123</div>
@@ -21,6 +21,16 @@
         <div class="col-sm-6 col-md-3 bg-color-blue">123</div>
         <div class="col-sm-6 col-md-3 bg-color-blue">123</div>
         <div class="col-sm-6 col-md-3 bg-color-blue">123</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
+        <div class="col-sm-3 col-md-3 col-4 bg-color-blue">123</div>
       </div>
     </div>
     <script src="js/main.js"></script>
